--- a/Application/Admin/View/Defray/sell.html
+++ b/Application/Admin/View/Defray/sell.html
@@ -37,9 +37,9 @@
                                 <thead>
                                 <tr>
                                     <th>编号</th>
-                                    <th>推荐编号</th>
+                                    <th>竞猜编号</th>
                                     <th>对应赛事</th>
-                                    <th>推荐用户</th>
+                                    <th>竞猜用户</th>
                                     <th>购买用户</th>
                                     <th>花费球币</th>
                                     <th>预测结果</th>
