--- a/Application/Admin/View/Index/index.html
+++ b/Application/Admin/View/Index/index.html
@@ -49,9 +49,9 @@
             <li> <a class="J_menuItem" href="{:U('match/follow')}">关注列表</a> </li>
           </ul>
         </li>
-        <li> <a href="#"> <i class="fa fa-home"></i> <span class="nav-label">推荐管理</span> <span class="fa arrow"></span> </a>
+        <li> <a href="#"> <i class="fa fa-home"></i> <span class="nav-label">竞猜管理</span> <span class="fa arrow"></span> </a>
           <ul class="nav nav-second-level">
-            <li> <a class="J_menuItem" href="{:U('tuijian/index')}">推荐列表</a> </li>
+            <li> <a class="J_menuItem" href="{:U('tuijian/index')}">竞猜列表</a> </li>
             <li> <a class="J_menuItem" href="{:U('tuijian/pay')}">购买列表</a> </li>
           </ul>
         </li>
