--- a/Application/Admin/View/Tuijian/pay.html
+++ b/Application/Admin/View/Tuijian/pay.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>推荐购买管理-后台系统</title>
+    <title>竞猜购买管理-后台系统</title>
     <meta name="keywords" content="事关注">
     <meta name="description" content="事关注">
     <link rel="shortcut icon" href="favicon.ico">
@@ -21,7 +21,7 @@
         <div class="col-sm-12">
             <div class="ibox float-e-margins">
                 <div class="ibox-title">
-                    <h5>推荐购买管理</h5>
+                    <h5>竞猜购买管理</h5>
                     <!--
                     <div class="ibox-tools"> <a class="collapse-link"> <i class="fa fa-chevron-up"></i> </a> <a class="dropdown-toggle" data-toggle="dropdown" href="table_data_tables.html#"> <i class="fa fa-wrench"></i> </a>
                       <ul class="dropdown-menu dropdown-user">
@@ -41,7 +41,7 @@
                                     <th>参与球队</th>
                                     <th>比赛时间</th>
                                     <th>比分情况</th>
-                                    <th>推荐用户</th>
+                                    <th>竞猜用户</th>
                                     <th>是否免费</th>
                                     <th>所需球币</th>
                                     <th>购买用户</th>
