--- a/Application/Admin/View/Tuijian/index.html
+++ b/Application/Admin/View/Tuijian/index.html
@@ -42,10 +42,8 @@
                                     <th>比赛时间</th>
                                     <th>比分情况</th>
                                     <th>竞猜用户</th>
-                                    <th>是否专家</th>
                                     <th>竞猜类型</th>
                                     <th>竞猜详情</th>
-                                    <th>是否竞猜</th>
                                     <th>是否收费</th>
                                     <th>收费球币</th>
                                     <th>竞彩结果</th>
@@ -57,14 +55,33 @@
                                     <tr class="gradeX">
                                         <td>{$item.match_id}</td>
                                         <td>{$item.match.league_name}</td>
-                                        <td>{$item.match.home_name} / {$item.match.away_name}</td>
+                                        <td>{$item.match.home_name}/{$item.match.away_name}</td>
                                         <td>{$item.match.time}</td>
-                                        <td>{$item.match.home_score} / {$item.match.away_score}</td>
+                                        <td>{$item.match.home_score}/{$item.match.away_score}</td>
                                         <td>{$item.user.nickname}</td>
-                                        <td><if condition="$item.user.is_expert eq 1">专家<else/>普通用户</if></td>
-                                        <td>{$item.type}</td>
-                                        <td>{$item.guess_1}, {$item.guess_2}</td>
-                                        <td><if condition="$item.is_top eq 1"><font color="red">竞猜</font><else/>普通</if></td>
+                                        <td>
+                                            <if condition="$item.type eq 1">
+                                                竞彩<if condition="$item.sub_type eq 1">让球</if>
+                                                <elseif condition="$item.type eq 2"/>
+                                                <if condition="$item.sub_type eq 1">半场</if>欧赔<elseif condition="$item.type eq 3"/>
+                                                <if condition="$item.sub_type eq 1">半场</if>大小球<elseif condition="$item.type eq 2"/>
+                                                <if condition="$item.sub_type eq 1">半场</if>让球<else/>角球</if>
+                                        </td>
+                                        <td><if condition="$item.type eq 1">
+                                            <if condition="$item.guess_1 eq 1 OR $item.guess_1 eq 4"/>主胜<elseif condition="$item.guess_1 eq 2 OR $item.guess_1 eq 5"/>和局<elseif condition="$item.guess_1 eq 3 OR $item.guess_1 eq 6"/>客胜<else/></if>
+                                            <if condition="$item.guess_2 eq 1 OR $item.guess_2 eq 4"/>/主胜<elseif condition="$item.guess_2 eq 2 OR $item.guess_2 eq 5"/>/和局<elseif condition="$item.guess_2 eq 3 OR $item.guess_2 eq 6"/>/客胜<else/></if>
+
+                                            </if>
+                                            <if condition="$item.type eq 2">
+                                                <if condition="$item.guess_1 eq 1 OR $item.guess_1 eq 4"/>主胜<elseif condition="$item.guess_1 eq 2 OR $item.guess_1 eq 5"/>和局<elseif condition="$item.guess_1 eq 3 OR  $item.guess_1 eq 6"/>客胜<else/></if>
+                                            </if>
+                                            <if condition="$item.type eq 3">
+                                                <if condition="$item.guess_1 eq 1 OR $item.guess_1 eq 4"/>大球<elseif condition="$item.guess_1 eq 3 OR  $item.guess_1 eq 6"/>小球<else/></if>
+                                            </if>
+                                            <if condition="$item.type eq 4">
+                                                <if condition="$item.guess_1 eq 1 OR $item.guess_1 eq 4"/>主胜<elseif condition="$item.guess_1 eq 3 OR  $item.guess_1 eq 6"/>客胜<else/></if>
+                                            </if>
+                                        </td>
                                         <td><if condition="$item.is_fee eq 1"><font color="red">收费</font><else/>免费</if></td>
                                         <td>{$item.fee}</td>
                                         <td><if condition="$item[status] eq '0'">等待结果<elseif condition="$item[status] eq 1" />赢<elseif condition="$item[status] eq 2" />输
