--- a/Application/Admin/View/Tuijian/index.html
+++ b/Application/Admin/View/Tuijian/index.html
@@ -73,13 +73,13 @@
 
                                             </if>
                                             <if condition="$item.type eq 2">
-                                                <if condition="($item.guess_1 eq 1) OR ($item.guess_1 eq 4)">主胜<elseif condition="($item.guess_1 eq 2) OR ($item.guess_1 eq 5)"/>和局<elseif condition="$item.guess_1 eq 3 OR  $item.guess_1 eq 6"/>客胜<else/></if>
+                                                <if condition="($item.guess_1 eq 1) OR ($item.guess_1 eq 4)">主胜<elseif condition="($item.guess_1 eq 2) OR ($item.guess_1 eq 5)"/>和局<elseif condition="($item.guess_1 eq 3) OR ($item.guess_1 eq 6)"/>客胜<else/></if>
                                             </if>
                                             <if condition="$item.type eq 3">
                                                 <if condition="($item.guess_1 eq 1) OR ($item.guess_1 eq 4)">大球<elseif condition="($item.guess_1 eq 3) OR ($item.guess_1 eq 6)"/>小球<else/></if>
                                             </if>
                                             <if condition="$item.type eq 4">
-                                                <if condition="($item.guess_1 eq 1) OR ($item.guess_1 eq 4)">主胜<elseif condition="($item.guess_1 eq 3) OR ($item.guess_1 eq 6")/>客胜<else/></if>
+                                                <if condition="($item.guess_1 eq 1) OR ($item.guess_1 eq 4)">主胜<elseif condition="($item.guess_1 eq 3) OR ($item.guess_1 eq 6)"/>客胜<else/></if>
                                             </if>
                                         </td>
                                         <td><if condition="$item.is_fee eq 1"><font color="red">收费</font><else/>免费</if></td>
