--- a/Application/Home/View/Response/about.html
+++ b/Application/Home/View/Response/about.html
@@ -30,10 +30,17 @@
         </ul>
         <ul>
         <pre>
- 杭州闲鹤科技有限公司，主要经营技术开发、技术服务、技术咨询、
-成果转让：网络信息技术、电子商务技术、互联网信息技术、电子产品、计算，注册资本1000000万元，
-公司是浙江杭州其他行业的知名企业，公司坚持诚信、互利，为客户提供最好的服务和最实惠的价格。
-热诚欢迎各界朋友前来参观、洽谈业务。
+关于我们
+章鱼帝足球是由杭州闲鹤科技有限公司研发，提供足彩的大数据分析，提供足彩的资讯服务。
+
+免责声明
+1、本APP提供所有信息服务、各种营销活动、运营计划均与Apple公司无关。
+2、本网站上的竞猜仅代表用户个人的意见，跟本网站无任何关系；
+3、本网站上刊登的广告仅代表推广客户的意见，其表达方式以及内容和本网站无任何关系。我司已经充分告知广告主链接广告不得违反国家相关法律规定，如有违者，本网站有权随时予以屏蔽及删除，并保留与有关部门合作追究的权利。
+4、本网站提供的资讯仅供足彩爱好者浏览，购买中国足彩参考之用，任何人不得用于非法用途，否则责任自负，跟本网站无关。
+
+联系我们
+QQ：1791303669
         </pre></ul>
     </div>
 
