--- a/Application/Admin/View/Tuijian/index.html
+++ b/Application/Admin/View/Tuijian/index.html
@@ -63,9 +63,12 @@
                                             <if condition="$item.type eq 1">
                                                 竞彩<if condition="$item.sub_type eq 1">让球</if>
                                                 <elseif condition="$item.type eq 2" />
-                                                <if condition="$item.sub_type eq 1">半场</if>欧赔<elseif condition="$item.type eq 3" />
-                                                <if condition="$item.sub_type eq 1">半场</if>大小球<elseif condition="$item.type eq 2" />
-                                                <if condition="$item.sub_type eq 1">半场</if>让球<else/>角球</if>
+                                                <if condition="$item.sub_type eq 1">半场</if>欧赔
+                                                <elseif condition="$item.type eq 3" />
+                                                <if condition="$item.sub_type eq 1">半场</if>大小球
+                                                <elseif condition="$item.type eq 4" />
+                                                <if condition="$item.sub_type eq 1">半场</if>让球<else/>
+                                                其他</if>
                                         </td>
                                         <td><if condition="$item.type eq 1">
                                             <if condition="($item.guess_1 eq 1) OR ($item.guess_1 eq 4)">主胜<elseif condition="($item.guess_1 eq 2) OR ($item.guess_1 eq 5)" />和局<elseif condition="($item.guess_1 eq 3) OR ($item.guess_1 eq 6)" />客胜<else/></if>
