--- a/Application/Home/View/Response/index.html
+++ b/Application/Home/View/Response/index.html
@@ -12,7 +12,7 @@
 
 <div class="container">
 	<div class="from">
-        <form action="{:U('/response/post')}" method="post" name="theForm" id="theForm" >
+        <form action="/response/post.html" method="post" name="theForm" id="theForm" >
             <input type="hidden" name="sign" value="{$sign}" />
 		<ul>
 			<div class="row" >
