--- a/Application/Admin/View/Admin/set.html
+++ b/Application/Admin/View/Admin/set.html
@@ -32,13 +32,43 @@
           <form method="post" name="edit" target="_self" action="{:U('admin/set')}" class="form-horizontal">
 
               <div class="form-group">
-                  <label class="col-sm-2 control-label">Api密钥：</label>
+                  <label class="col-sm-2 control-label">ShowFlag：</label>
                   <div class="col-sm-10">
-                      <input type="text" name="config[api][api_key]" value="{$config.api.api_key}" class="form-control">
+                      <select name="config[api][showFlag]" class="form-control">
+                          <option value="yes" <if condition="$config.api.showFlag eq 'yes'">selected</if>>yes</option>
+                          <option value="no" <if condition="$config.api.showFlag eq 'no'">selected</if>>no</option>
+                      </select>
                   </div>
               </div>
               <div class="hr-line-dashed"></div>
-
+              <div class="form-group">
+                  <label class="col-sm-2 control-label">Test User：</label>
+                  <div class="col-sm-10">
+                      <input name="config[api][test_user]" class="form-control"  value="{$config.api.test_user}"/>
+                  </div>
+              </div>
+              <div class="hr-line-dashed"></div>
+              <div class="form-group">
+                  <label class="col-sm-2 control-label">Share Url：</label>
+                  <div class="col-sm-10">
+                      <input name="config[api][share_url]" class="form-control"  value="{$config.api.share_url}"/>
+                  </div>
+              </div>
+              <div class="hr-line-dashed"></div>
+              <div class="form-group">
+                  <label class="col-sm-2 control-label">Android Version：</label>
+                  <div class="col-sm-10">
+                      <input name="config[api][android_version]" class="form-control"  value="{$config.api.android_version}"/>
+                  </div>
+              </div>
+              <div class="hr-line-dashed"></div>
+              <div class="form-group">
+                  <label class="col-sm-2 control-label">Android Download URL：</label>
+                  <div class="col-sm-10">
+                      <input name="config[api][android_down_url]" class="form-control"  value="{$config.api.android_down_url}"/>
+                  </div>
+              </div>
+              <div class="hr-line-dashed"></div>
               <div class="form-group">
               <div class="col-sm-4 col-sm-offset-2">
                 <button class="btn btn-primary" type="submit">保存内容</button>
