--- a/Application/Admin/View/Admin/set.html
+++ b/Application/Admin/View/Admin/set.html
@@ -70,6 +70,13 @@
               </div>
               <div class="hr-line-dashed"></div>
               <div class="form-group">
+                  <label class="col-sm-2 control-label">安卓更新说明：</label>
+                  <div class="col-sm-10">
+                      <input name="config[api][android_remark]" class="form-control"  value="{$config.api.android_remark}"/>
+                  </div>
+              </div>
+              <div class="hr-line-dashed"></div>
+              <div class="form-group">
                   <label class="col-sm-2 control-label">iOS版本：</label>
                   <div class="col-sm-10">
                       <input name="config[api][ios_version]" class="form-control"  value="{$config.api.ios_version}"/>
@@ -82,6 +89,12 @@
                       <input name="config[api][ios_down_url]" class="form-control"  value="{$config.api.ios_down_url}"/>
                   </div>
               </div>
+              <div class="hr-line-dashed"></div>
+              <div class="form-group">
+                  <label class="col-sm-2 control-label">iOS更新说明：</label>
+                  <div class="col-sm-10">
+                      <input name="config[api][ios_remark]" class="form-control"  value="{$config.api.ios_remark}"/>
+                  </div>
               <div class="hr-line-dashed"></div>
               <div class="form-group">
               <div class="col-sm-4 col-sm-offset-2">
