--- a/Application/Admin/View/Admin/set.html
+++ b/Application/Admin/View/Admin/set.html
@@ -72,7 +72,7 @@
               <div class="form-group">
                   <label class="col-sm-2 control-label">安卓更新说明：</label>
                   <div class="col-sm-10">
-                      <input name="config[api][android_remark]" class="form-control"  value="{$config.api.android_remark}"/>
+                      <textarea name="config[api][android_remark]" class="form-control" >{$config.api.android_remark}</textarea>
                   </div>
               </div>
               <div class="hr-line-dashed"></div>
@@ -92,8 +92,8 @@
               <div class="hr-line-dashed"></div>
               <div class="form-group">
                   <label class="col-sm-2 control-label">iOS更新说明：</label>
-                  <div class="col-sm-10">
-                      <input name="config[api][ios_remark]" class="form-control"  value="{$config.api.ios_remark}"/>
+                  <textarea class="col-sm-10">
+                      <textarea name="config[api][ios_remark]" class="form-control">{$config.api.ios_remark}</textarea>
                   </div>
               <div class="hr-line-dashed"></div>
               <div class="form-group">
