--- a/Application/Admin/View/Admin/set.html
+++ b/Application/Admin/View/Admin/set.html
@@ -92,7 +92,7 @@
               <div class="hr-line-dashed"></div>
               <div class="form-group">
                   <label class="col-sm-2 control-label">iOS更新说明：</label>
-                  <textarea class="col-sm-10">
+                  <div class="col-sm-10">
                       <textarea name="config[api][ios_remark]" class="form-control">{$config.api.ios_remark}</textarea>
                   </div>
               <div class="hr-line-dashed"></div>
