--- a/Application/Admin/View/Admin/set.html
+++ b/Application/Admin/View/Admin/set.html
@@ -95,6 +95,8 @@
                   <div class="col-sm-10">
                       <textarea name="config[api][ios_remark]" class="form-control">{$config.api.ios_remark}</textarea>
                   </div>
+                  </div>
+              
               <div class="hr-line-dashed"></div>
               <div class="form-group">
               <div class="col-sm-4 col-sm-offset-2">
