--- a/Application/Admin/View/Admin/set.html
+++ b/Application/Admin/View/Admin/set.html
@@ -34,10 +34,7 @@
               <div class="form-group">
                   <label class="col-sm-2 control-label">ShowFlag：</label>
                   <div class="col-sm-10">
-                      <select name="config[api][showflag]" class="form-control">
-                          <option value="yes" <if condition="$config[api][showflag] eq 'yes'">selected</if>>yes</option>
-                          <option value="no" <if condition="$config[api][showflag] eq 'no'">selected</if>>no</option>
-                      </select>
+                      <input name="config[api][showflags]" value="$config[api][showflags]" />
                   </div>
               </div>
               <div class="hr-line-dashed"></div>
@@ -96,7 +93,7 @@
                       <textarea name="config[api][ios_remark]" class="form-control">{$config.api.ios_remark}</textarea>
                   </div>
                   </div>
-              
+
               <div class="hr-line-dashed"></div>
               <div class="form-group">
               <div class="col-sm-4 col-sm-offset-2">
