--- a/Application/Admin/View/Admin/set.html
+++ b/Application/Admin/View/Admin/set.html
@@ -34,7 +34,7 @@
               <div class="form-group">
                   <label class="col-sm-2 control-label">ShowFlag：</label>
                   <div class="col-sm-10">
-                      <input name="config[api][showflags]" value="$config[api][showflags]" />
+                      <input name="config[api][showflags]" value="{$config[api][showflags]}" />
                   </div>
               </div>
               <div class="hr-line-dashed"></div>
