--- a/Application/Admin/View/Admin/set.html
+++ b/Application/Admin/View/Admin/set.html
@@ -83,7 +83,7 @@
               <div class="form-group">
                   <label class="col-sm-2 control-label">iOS链接：</label>
                   <div class="col-sm-10">
-                      <input name="config[api][ios_down_url]" class="form-control"  value="{$config.api.ios_down_url}"/>
+                      <input  class="form-control" name="config[api][ios_down_url]" class="form-control"  value="{$config.api.ios_down_url}"/>
                   </div>
               </div>
               <div class="hr-line-dashed"></div>
