--- a/Application/Admin/View/Users/index.html
+++ b/Application/Admin/View/Users/index.html
@@ -68,7 +68,7 @@
                                         <td>{$item.credit}</td>
                                         <td>{$item.credit}</td>
                                         <td>{$item.credit}</td>
-                                        <td>{$item.create_time|date='Y-m-d H:i:s',###}</td>
+                                        <td>{$item.register_time|date='Y-m-d H:i:s',###}</td>
                                         <td>{$item.update_time|date='Y-m-d H:i:s',###}</td>
                                         <td class="center">
                                             <a href="{:U('/users/userview', ['id' => $item['id']])}"><i class="fa fa-check text-navy"></i>详细</a>
